CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(BOOST_ASSIGN)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_CXX_FLAGS "-g -pipe -W -Wall -fPIC")
SET(WORK_ROOT "../../../..")

SET(SRC_LIST boost_assign_usage.cpp)

INCLUDE_DIRECTORIES(
    "./include"
    "${BOOST_ASSIGN_SOURCE_DIR}/${WORK_ROOT}/third-64/boost/include"
)

LINK_DIRECTORIES(
    "${BOOST_ASSIGN_SOURCE_DIR}/${WORK_ROOT}/third-64/boost/lib"
)

ADD_DEFINITIONS(
)

ADD_EXECUTABLE(boost_assign ${SRC_LIST})

TARGET_LINK_LIBRARIES(boost_assign
)

ADD_CUSTOM_COMMAND(
    TARGET boost_assign
    POST_BUILD
    COMMAND echo "${BOOST_ASSIGN_SOURCE_DIR}"
    COMMAND echo "${BOOST_ASSIGN_BINARY_DIR}"
)
