CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(BOOST_STRING_ALGORITHM)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_CXX_FLAGS "-g -pipe -W -Wall -fPIC")
SET(WORK_ROOT "../../../..")

SET(SRC_LIST boost_string_algorithm_usage.cpp)

INCLUDE_DIRECTORIES(
    "./include"
    "${BOOST_STRING_ALGORITHM_SOURCE_DIR}/${WORK_ROOT}/boost/include"
)

LINK_DIRECTORIES(
    "${BOOST_STRING_ALGORITHM_SOURCE_DIR}/${WORK_ROOT}/boost/lib"
)

ADD_DEFINITIONS(
)

ADD_EXECUTABLE(boost_string_algorithm ${SRC_LIST})

TARGET_LINK_LIBRARIES(boost_string_algorithm
)

ADD_CUSTOM_COMMAND(
    TARGET boost_string_algorithm
    POST_BUILD
    COMMAND echo "${BOOST_STRING_ALGORITHM_SOURCE_DIR}"
    COMMAND echo "${BOOST_STRING_ALGORITHM_BINARY_DIR}"
)
