CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(UNIX_NETWORK)

SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_CXX_FLAGS "-g -pipe -W -Wall -fPIC")
SET(WORK_ROOT "../../../..")

SET(NETWORK_USAGE network_usage.c)
SET(BYTEORDER byteorder.c)
SET(SERVER_TIME1 server_time1.c)
SET(SERVER_TIME2 server_time2.c)
SET(SERVER_ECHO1 server_echo1.c)
SET(SERVER_ECHO2 server_echo2.c)
SET(SERVER_ECHO3 server_echo3.c)

SET(CLIENT_ECHO client_echo.c)


INCLUDE_DIRECTORIES(
    "./include"
)

LINK_DIRECTORIES(
)

ADD_DEFINITIONS(
)

ADD_EXECUTABLE(byteorder ${BYTEORDER})
ADD_EXECUTABLE(network_usage ${NETWORK_USAGE})
ADD_EXECUTABLE(server_time1 ${SERVER_TIME1})
ADD_EXECUTABLE(server_time2 ${SERVER_TIME2})
ADD_EXECUTABLE(server_echo1 ${SERVER_ECHO1})
ADD_EXECUTABLE(server_echo2 ${SERVER_ECHO2})
ADD_EXECUTABLE(server_echo3 ${SERVER_ECHO3})

ADD_EXECUTABLE(client_echo ${CLIENT_ECHO})
